# text2sql

./: .cursorrules  .dockerignore  .env.airflow.example  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  INVESTIGATION_REPORT.md  Makefile  POLICY.md  README.md  cache_flow_e2e.md  check-pre-commit.sh  conftest.py  docker-compose.app.yml  docker-compose.evals.yml  docker-compose.grafana.yml  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup-pre-commit.sh
agent/: GROUNDING.md  pyproject.toml  pytest.ini  test_agent.py
agent/scripts/: README.md  evaluation_metrics.py  mcp_sdk_spike.py  run_evaluation.py
agent/src/: __init__.py
agent/src/agent_core/: graph.py  llm_client.py  retriever.py  state.py  telemetry.py  telemetry_schema.py  tools.py
agent/src/nodes/: retrieve.py
agent/tests/: __init__.py  conftest.py  schema_fixtures.py  test_agent_tools.py  test_ast_security.py  test_clarify.py  test_constraint_extractor.py  test_constraint_extractor_fuzz.py  test_context_propagation_graph.py  test_correct.py  test_execute.py  test_generate.py  test_generate_few_shot.py  test_generate_schema.py  test_golden_loader.py  test_graph.py  test_graph_import_isolation.py  test_ingress_sanitization.py  test_instrumentation_parity.py  test_intent_signature.py  test_llm_auth_validation.py  test_llm_client.py  test_llm_sanitization.py  test_otel_isolation.py  test_otel_metadata.py  test_otel_scaffolding.py  test_otel_setup.py  test_otel_smoke.py  test_otel_token_usage.py  test_parsing.py  test_persistence_reliability.py  test_persistence_robustness.py  test_phase1_1_otel_isolation.py  test_phase1_2_otel_setup.py  test_plan.py  test_policy_enforcer.py  test_recommendation_telemetry.py  test_retrieve.py  test_retriever.py  test_router.py  (+12 more)
agent/tests/nodes/: test_visualize.py
agent/tests/unit/: test_generate_node.py  test_graph_formatter.py  test_graph_wrapper.py  test_llm_import_safety.py  test_persistence_adapter.py  test_retrieve_node.py  test_retry.py  test_state_model.py  test_state_scaffolding.py  test_state_updates.py  test_turn_classification.py
agent/tests/viz/: test_placeholder.py  test_viz_state.py
common/: pyproject.toml
common/src/common/: __init__.py  telemetry.py
common/tests/: __init__.py  test_boundary.py  test_config_dataset.py  test_dataset_config_warning.py  test_sanitization_config.py
ingestion/: pyproject.toml
ingestion/src/ingestion/: __init__.py  example_loader.py  sync_engine.py  table_first_retriever.py  vector_index_ddl.py  vector_indexer.py
mcp-server/: Dockerfile  pyproject.toml  pytest.ini
mcp-server/scripts/: cache_analytics.py  enrich_seeds.py  seed_examples.py  seed_golden_dataset.py  test_rag.py  validate_seeds.py
mcp-server/src/: indexer.py  main.py  rag.py  tools.py
mcp-server/src/mcp_server/: __init__.py  cache.py  db.py  indexer.py  main.py  rag.py  retrieval.py  tools.py
mcp-server/tests/: __init__.py  conftest.py  init_test_db.sql  test_cache.py  test_cache_lifecycle.py  test_control_plane_db.py  test_db.py  test_health.py  test_import_check.py  test_indexer.py  test_main.py  test_mcp_parity.py  test_mcp_tools.py  test_packaging_smoke.py  test_patterns_regression.py  test_rag.py  test_rag_engine.py  test_retrieval.py  test_schema_indexer.py  test_seeding.py  test_tools.py
mcp-server/tests/dal/: test_pinned_recommendations_db_routing.py
mcp-server/tests/factory/: test_retriever.py
mcp-server/tests/fixtures/: feedback_fixtures.py
mcp-server/tests/graph_ingestion/: test_hydrator.py  test_indexing.py  test_postgres_retriever.py  test_schema_parser.py  test_sync_engine.py  test_table_first_retriever.py
mcp-server/tests/integration/: test_clarification_synonym_regression.py  test_pattern_lifecycle_e2e.py  test_recommendation_flow_e2e.py
mcp-server/tests/retrievers/: test_factory.py  test_postgres_retriever.py
mcp-server/tests/services/: test_recommendation.py
mcp-server/tests/tools/: test_execute_sql_query.py  test_generate_patterns_tool.py  test_get_few_shot_examples.py  test_get_sample_data.py  test_get_table_schema.py  test_list_tables.py  test_lookup_cache.py  test_manage_pin_rules.py  test_recommend_examples.py  test_schema.py  test_semantic.py  test_semantic_traversal_guardrail.py  test_semantic_wiring_verification.py
mcp-server/tests/unit/: test_admin_tools.py  test_alias_service.py  test_ambiguity.py  test_binder_ontology.py  test_cache_logic.py  test_canonicalization_integration.py  test_conversation_dal.py  test_dal_context.py  test_dal_executor.py  test_wal.py  (+24 more)
mcp-server/tests_integration/: test_cache_integration_local.py  test_pinned_recos_persistence.py  test_security_rls.py
pyproject/agent-service/: pyproject.toml
pyproject/dal/: pyproject.toml
pyproject/evaluation/: pyproject.toml
pyproject/otel-worker/: pyproject.toml
pyproject/synthetic-data/: pyproject.toml
pyproject/ui-api-gateway/: pyproject.toml
schema/: pyproject.toml
schema/tests/: test_boundary.py  test_evaluation_metrics.py  test_models.py  test_packaging.py
streamlit-app/: Dockerfile  pyproject.toml
streamlit-app/tests/: test_architecture_boundaries.py  test_exceptiongroup_unwrap.py
synthetic-data/: .gitignore  README.md  pyproject.toml
synthetic-data/examples/: config_small.yaml
synthetic-data/golden/: mvp_digest.txt
synthetic-data/test_output/: bridge_customer_address.csv  dim_account.csv  dim_account.parquet  dim_customer.parquet  dim_time.csv  fact_dispute.csv  fact_dispute.parquet  fact_payment.csv  fact_payment.parquet  fact_refund.csv  fact_refund.parquet  fact_transaction.csv  fact_transaction.parquet  manifest.json
synthetic-data/test_validation_run/: manifest.json  validation_report.md
synthetic-data/tests/: __init__.py  test_config.py  test_context.py  test_determinism.py  test_examples_generator.py  test_export.py  test_fact_generators.py  test_generators.py  test_hashing.py  test_orchestrator.py  test_postgres_loader.py  test_scripts.py  test_sql_export.py  test_synthetic_config.py  test_validation.py
(+1943 files in other folders)
