[project]
name = "text2sql-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "text2sql-common",
    "text2sql-dal",
    "schema",
    "text2sql-ingestion",
    "text2sql-mcp",
    "text2sql-streamlit",
    "text2sql-agent",
    "otel-worker",
    "text2sql-synth",
]

[tool.uv.workspace]
members = [
    "pyproject/common",
    "pyproject/dal",
    "pyproject/schema",
    "pyproject/ingestion",
    "mcp-server",
    "streamlit-app",
    "agent",
    "observability/otel-worker",
    "synthetic-data",
]

[tool.uv.sources]
text2sql-common = { workspace = true }
schema = { workspace = true }
text2sql-dal = { workspace = true }
text2sql-ingestion = { workspace = true }
text2sql-mcp = { workspace = true }
text2sql-streamlit = { workspace = true }
text2sql-agent = { workspace = true }
otel-worker = { workspace = true }
text2sql-synth = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["streamlit_app", "agent", "common", "dal", "ingestion", "mcp_server", "observability", "schema"]
known_third_party = ["streamlit", "pandas", "nest_asyncio"]
# Explicitly skip known virtualenv directories to speed up and avoid confusion
skip = [".venv", "venv", ".git", "__pycache__", "build", "dist"]
