[project]
name = "text2sql-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "text2sql-common",
    "text2sql-dal",
    "schema",
    "text2sql-ingestion",
    "text2sql-mcp",
    "text2sql-streamlit",
    "text2sql-agent",
    "otel-worker",
    "text2sql-synth",
    "text2sql-evaluation",
]

[tool.uv.workspace]
members = [
    "pyproject/common",
    "pyproject/dal",
    "pyproject/schema",
    "pyproject/ingestion",
    "pyproject/mcp-server",
    "pyproject/streamlit-app",
    "pyproject/agent",
    "pyproject/otel-worker",
    "pyproject/synthetic-data",
    "pyproject/evaluation",
]

[tool.uv.sources]
text2sql-common = { workspace = true }
schema = { workspace = true }
text2sql-dal = { workspace = true }
text2sql-ingestion = { workspace = true }
text2sql-mcp = { workspace = true }
text2sql-streamlit = { workspace = true }
text2sql-agent = { workspace = true }
otel-worker = { workspace = true }
text2sql-synth = { workspace = true }
text2sql-evaluation = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.5.0",
    "msgpack>=1.0.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ui", "agent", "common", "dal", "ingestion", "mcp_server", "observability", "schema", "evaluation", "synthetic_data_gen"]
known_third_party = ["streamlit", "pandas", "nest_asyncio"]
# Explicitly skip known virtualenv directories to speed up and avoid confusion
skip = [".venv", "venv", ".git", "__pycache__", "build", "dist"]

[tool.uv]
constraint-dependencies = [
    "numpy<2.0.0",
]

[[tool.uv.dependency-metadata]]
name = "opentelemetry-proto"
requires-dist = ["protobuf>=3.19"]

[[tool.uv.dependency-metadata]]
name = "streamlit"
requires-dist = ["protobuf>=3.20", "packaging>=20"]
