[project]
name = "text2sql-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "text2sql-common",
    "text2sql-dal",
    "schema",
    "text2sql-ingestion",
    "text2sql-mcp",
    "text2sql-agent",
    "otel-worker",
    "text2sql-synth",
    "text2sql-evaluation",
]

[tool.uv.workspace]
members = [
    "pyproject/common",
    "pyproject/dal",
    "pyproject/schema",
    "pyproject/ingestion",
    "pyproject/mcp-server",
    "pyproject/agent",
    "pyproject/agent-service",
    "pyproject/ui-api-gateway",
    "pyproject/otel-worker",
    "pyproject/synthetic-data",
    "pyproject/evaluation",
]

[tool.uv.sources]
text2sql-common = { workspace = true }
schema = { workspace = true }
text2sql-dal = { workspace = true }
text2sql-ingestion = { workspace = true }
text2sql-mcp = { workspace = true }
text2sql-agent = { workspace = true }
otel-worker = { workspace = true }
text2sql-synth = { workspace = true }
text2sql-evaluation = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.5.0",
    "msgpack>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = [".git", ".venv", ".pytest_cache", "__pycache__", "dist", "build"]
pythonpath = ["src"]
addopts = "--import-mode=importlib -p no:warnings"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests requiring external services (db, docker, network)",
    "e2e: end-to-end tests",
    "regression: regression tests",
    "requires_db: requires live database services",
    "requires_mcp: requires live MCP server connection",
    "requires_control_db: requires control-plane database with schema",
    "dataset_synthetic: require synthetic dataset"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ui", "agent", "common", "dal", "ingestion", "mcp_server", "observability", "schema", "evaluation", "synthetic_data_gen"]
known_third_party = ["pandas", "nest_asyncio"]
# Explicitly skip known virtualenv directories to speed up and avoid confusion
skip = [".venv", "venv", ".git", "__pycache__", "build", "dist"]

[tool.uv]
constraint-dependencies = [
    "numpy<2.0.0",
]

[[tool.uv.dependency-metadata]]
name = "opentelemetry-proto"
requires-dist = ["protobuf>=3.19"]
