[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Text 2 SQL Reasoning Engine using LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-postgres>=0.0.16",  # For pgvector
    "psycopg2-binary>=2.9.0",     # DB Driver
    "mcp>=1.0.0",  # Official MCP SDK for tool discovery/invocation
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.28.0",  # For S3 artifact storage
    "sqlglot>=25.0.0",  # For SQL AST parsing and validation
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "msgpack",
]
mlflow = [
    "mlflow==3.8.1",
    "langchain>=0.3.0",  # Required for mlflow.langchain.autolog()
]
llm-providers = [
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_core*"]
