[project]
name = "text2sql-ingestion"
version = "0.1.0"
description = "Ingestion pipeline for Text 2 SQL"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "openai>=1.0.0",
    "hnswlib>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion*"]
