[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema"
version = "0.1.0"
description = "Neutral schema models for Text2SQL"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0"]

[tool.setuptools]
package-dir = {"" = "../src"}

[tool.setuptools.packages.find]
where = ["../src"]
include = ["schema*"]
