[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2sql-synth"
version = "0.1.0"
description = "Deterministic synthetic data generation for text2sql testing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.scripts]
text2sql-synth = "text2sql_synth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql_synth"]
