[project]
name = "text2sql-dal"
version = "0.1.0"
description = "Data Access Layer for Text 2 SQL"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "neo4j>=5.0.0",
    "opentelemetry-api",
    "python-dotenv>=1.0.0",
    "tenacity",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../../src"}

[tool.setuptools.packages.find]
where = ["../../src"]
include = ["dal*"]
