[project]
name = "text2sql-evaluation"
version = "0.1.0"
description = "Evaluation runner and DAGs for Text-to-SQL agent"
dependencies = [
    "pydantic>=2.6.0",

    "text2sql-agent",
    "schema",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../../src"}

[tool.setuptools.packages.find]
where = ["../../src"]
include = ["evaluation*"]
