[project]
name = "otel-worker"
version = "0.1.0"
description = "OTEL worker for processing traces and dual-writing"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "opentelemetry-proto>=1.22.0",
    "protobuf>=7.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../../src"}

[tool.setuptools.packages.find]
where = ["../../src"]
include = ["otel_worker*"]
